# bang

./: Cargo.toml  Makefile  README.md
assets/paltex/: bubu.paltex  lima.paltex  toge.paltex
bang_core/: Cargo.toml
bang_core/src/: alloc.rs  draw.rs  ffi.rs  game.rs  input.rs  keys.rs  lib.rs  num.rs
bang_rt/: Cargo.toml
bang_rt/src/: alloc.rs  draw.rs  error.rs  input.rs  keys.rs  lib.rs  load.rs  timer.rs  win.rs
bang_rt_common/: Cargo.toml
bang_rt_common/src/: alloc.rs  draw.rs  end.rs  error.rs  input.rs  lib.rs  load.rs  logic_loop.rs  runtime.rs  timer.rs
bang_rt_common/tests/test_normal_dylib/: Cargo.toml
bang_rt_common/tests/test_normal_dylib/src/: lib.rs
bang_rt_common/tests/test_panic_dylib/: Cargo.toml
bang_rt_common/tests/test_panic_dylib/src/: lib.rs
bang_rt_common/tests/test_symbol_missing_dylib/: Cargo.toml
bang_rt_macos/: Cargo.toml
bang_rt_macos/src/: draw.rs  lib.rs  shaders.metal  timer.rs  win.rs
bang_rt_tui/: Cargo.toml
bang_rt_tui/src/: draw.rs  input.rs  lib.rs  win.rs
demo/: Cargo.toml
demo/demo_dist/: Cargo.toml
demo/demo_impl/: Cargo.toml
demo/demo_main/: Cargo.toml
demo/demo_static/: Cargo.toml
demo/src/: lib.rs
demo_dist/: Cargo.toml
demo_dist/src/: main.rs
demo_impl/: Cargo.toml
demo_runner/: Cargo.toml
demo_runner/src/: main.rs
libs/paltex/: Cargo.toml
libs/vec_arena/: Cargo.toml
runtimes/bang_rt_macos/: Cargo.toml  build.rs
runtimes/bang_rt_tui/: Cargo.toml
src/: draw.rs  error.rs  keys.rs  main.rs  num.rs  shaders.metal  timer.rs  win.rs
src/objc/: crimes.rs  mod.rs  wrappers.rs
(+39 files in other folders)
