[workspace]
resolver = "3"
members = [
    "runtimes/bang_rt_macos",
    "runtimes/bang_rt_tui",
    "bang_rt_common",
    "bang_core",
    "demo/demo_impl",
    "demo/demo_dist",
    "bang_rt_common/tests/test_normal_dylib",
    "bang_rt_common/tests/test_panic_dylib",
    "bang_rt_common/tests/test_symbol_missing_dylib",
    "tools/png2paltex",
    "tools/paltex2ascii",
    "libs/paltex",
    "libs/paltex/fuzz",
]
