[package]
name = "bang_rt_common"
version = "0.1.0"
edition = "2024"

[dependencies]
bang_core = { path = "../bang_core" }
paltex = { path = "../libs/paltex" }
arena = { path = "../libs/arena" }

[dev-dependencies]
test_normal_dylib = { path = "tests/test_normal_dylib", default-features = false }
test_panic_dylib = { path = "tests/test_panic_dylib", default-features = false }
